--- a/css/login.css
+++ b/css/login.css
@@ -63,7 +63,7 @@ form{
     justify-content: space-evenly;
 }
 .formLogin{
-    height: 25vh;
+    height: 27vh;
     width: 400px;
 }
 .loginImagencontenedor{
@@ -92,4 +92,10 @@ form{
 }
 .botonSecundario{
     background-color: var(--c1);
+}
+.mensajeFormularioInputs{
+    text-align: center;
+    font-size: 12px;
+    color: #00000087;
+    margin-top: 4em;
 }
